//
//  AppConstraints.swift
//  TextFields
//
//  Created by Artem Shcherban on 10.02.2022.
//

import Foundation

struct AppConstants {
    
    static let appTitleConstant = "Text Fields"
    static let alphabetletters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
    static let setOfNumbers = "0123456789"
    static let subtitleNamesArray = ["NO dights", "Input Limit", "Only characters", "Link", "Password"]
    static let textFieldPlaceholdersArray = ["Type here", "Type here", "WWWWW-DDDDD", "https://example.com", "Password"]
    static let maxNumberOfCharacters = 10
    static let ruleTitlesArray = ["- minimum of 8 characters.", "- minimum 1 dight.", "- minimum 1 lowercased.",
                                  "- minimum 1 uppercased."]
    static let singleViewButtonTitle = "Single View Controller"
    static let multipleViewsButtonTitle = "Multiple Views Controller"
}
