...
                                 inputLimitViewController,
                                 onlyCharactersViewController,
                                 linkViewController,
                                 validationRulesViewController], animated: false)
        self.tabBar.backgroundColor = ColorConstants.tabBarColor
        self.tabBar.unselectedItemTintColor = ColorConstants.graphiteColor
        self.tabBar.accessibilityIdentifier = "MultipleViewsTabBar"
    }
    
    private func setTabBarTitle() {
        guard let items = self.tabBar.items else { return }
        var index = 0
        for item in items {
...
